Fixed displaying users list on small screens (when collapsed)

--- a/example/static/css/chat.css
+++ b/example/static/css/chat.css
@@ -1,8 +1,19 @@
 /* Landscape phones and down */
-@media (max-width: 480px) {  }
+@media (max-width: 480px) {  
+    .users-list:not(.in) {
+        min-height: 0 !important;
+        padding: 0 !important;
+        border-width: 0 !important;
+    }
+}
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 979px) {
+    .users-list:not(.in) {
+        min-height: 0 !important;
+        padding: 0 !important;
+        border-width: 0 !important;
+    }
 }
 
 /* Portrait tablet to landscape and desktop */
